include/fitpack_parametric_surface_c.h

/* ===========================================================================================
 * Method Wrappers (standalone-compatible only)
 * =========================================================================================== */

/**
 * @brief interpolate
 * @param reset_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_parametric_surface_c_interpolate(const fitpack_parametric_surface_c* self, bool* reset_knots);
/**
 * @brief comm_size
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_parametric_surface_c_comm_size(const fitpack_parametric_surface_c* self);
/**
 * @brief mse
 * @return Result value
 */
FITPACK_CAPI_EXPORT double fitpack_parametric_surface_c_mse(const fitpack_parametric_surface_c* self);
/**
 * @brief core_comm_size
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_parametric_surface_c_core_comm_size(const fitpack_parametric_surface_c* self);
/**
 * @brief destroy_base
 */
FITPACK_CAPI_EXPORT void fitpack_parametric_surface_c_destroy_base(fitpack_parametric_surface_c* self);
/**
 * @brief fit
 * @param smoothing 
 * @param periodic 
 * @param keep_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_parametric_surface_c_fit(const fitpack_parametric_surface_c* self, double* smoothing, int32_t n, bool* periodic, bool* keep_knots);
/**
 * @brief least_squares
 * @param u_knots 
 * @param v_knots 
 * @param smoothing 
 * @param reset_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_parametric_surface_c_least_squares(const fitpack_parametric_surface_c* self, int32_t n, double* u_knots, double* v_knots, double* smoothing, bool* reset_knots);
/**
 * @brief surf_eval_one
 * @param u 
 * @param v 
 * @param ierr 
 * @note result: caller-allocated buffer of n_result elements; n_result = total element count of (this % idim) — known to the caller from object state / inputs
 */
FITPACK_CAPI_EXPORT void fitpack_parametric_surface_c_surf_eval_one(fitpack_parametric_surface_c* self, double u, double v, int32_t* ierr, double* result, int32_t n_result);
/**
 * @brief surf_eval_grid
 * @param u 
 * @param v 
 * @param ierr 
 * @note result: caller-allocated buffer of n_result elements; n_result = total element count of (SIZE(v), SIZE(u), this % idim) — known to the caller from object state / inputs
 * @note result is the rank-3 Fortran result flattened column-major
 */
FITPACK_CAPI_EXPORT void fitpack_parametric_surface_c_surf_eval_grid(fitpack_parametric_surface_c* self, int32_t n, const double* u, const double* v, int32_t* ierr, double* result, int32_t n_result);
/**
 * @brief comm_pack
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_parametric_surface_c_comm_pack(fitpack_parametric_surface_c* self, int32_t n, double* buffer);
/**
 * @brief comm_expand
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_parametric_surface_c_comm_expand(fitpack_parametric_surface_c* self, int32_t n, const double* buffer);
/**
 * @brief core_comm_pack
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_parametric_surface_c_core_comm_pack(fitpack_parametric_surface_c* self, int32_t n, double* buffer);
/**
 * @brief core_comm_expand
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_parametric_surface_c_core_comm_expand(fitpack_parametric_surface_c* self, int32_t n, const double* buffer);