src/fitpack_parametric_surfaces_c.f90


    ! ===========================================================================================
    ! SECTION 6: Fortran Constructors (NOT bind(C))
    ! ===========================================================================================

    !> Create from Fortran object (owns copy)
    type(fitpack_parametric_surface_c) function fitpack_parametric_surface_c_f2c(f) result(c)
        type(fitpack_parametric_surface), intent(in) :: f
        type(fitpack_parametric_surface), pointer :: fptr
        logical :: ok

        ok = fitpack_parametric_surface_c_pointer(c, fptr)
        if (ok) fptr = f
    end function fitpack_parametric_surface_c_f2c

    !> Create from Fortran object (optionally as pointer)
    type(fitpack_parametric_surface_c) function fitpack_parametric_surface_c_fptr2c(f, want_pointer) result(c)
        type(fitpack_parametric_surface), intent(inout), target :: f
        logical, intent(in) :: want_pointer

        if (want_pointer) then
            c%cptr = c_loc(f)
            c%is_pointer = .true._c_bool
        else
            c = fitpack_parametric_surface_c_f2c(f)
        end if
    end function fitpack_parametric_surface_c_fptr2c

    ! ===========================================================================================
    ! SECTION 7: Method Wrappers (bind(C))
    ! ===========================================================================================
    !> interpolate
    integer(c_int32_t) function fitpack_parametric_surface_c_interpolate(this, reset_knots) bind(C,  &
        & name='fitpack_parametric_surface_c_interpolate')
        type(fitpack_parametric_surface_c), intent(in) :: this
        logical(c_bool), intent(in), optional :: reset_knots
        type(fitpack_parametric_surface), pointer :: fthis
        logical :: f_reset_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(reset_knots)) f_reset_knots = logical(reset_knots)
            if (present(reset_knots)) then
                fitpack_parametric_surface_c_interpolate = fthis%interpolate(reset_knots=f_reset_knots)
            else
                fitpack_parametric_surface_c_interpolate = fthis%interpolate()
            end if
        else
            fitpack_parametric_surface_c_interpolate = 0
        end if
    end function fitpack_parametric_surface_c_interpolate

    !> comm_size
    integer(c_int32_t) function fitpack_parametric_surface_c_comm_size(this) bind(C, name='fitpack_parametric_surface_c_comm_size')
        type(fitpack_parametric_surface_c), intent(in) :: this
        type(fitpack_parametric_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_parametric_surface_c_comm_size = fthis%comm_size()
        else
            fitpack_parametric_surface_c_comm_size = 0
        end if
    end function fitpack_parametric_surface_c_comm_size

    !> mse
    real(c_double) function fitpack_parametric_surface_c_mse(this) bind(C, name='fitpack_parametric_surface_c_mse')
        type(fitpack_parametric_surface_c), intent(in) :: this
        type(fitpack_parametric_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_parametric_surface_c_mse = fthis%mse()
        else
            fitpack_parametric_surface_c_mse = 0.0_c_double
        end if
    end function fitpack_parametric_surface_c_mse

    !> core_comm_size
    integer(c_int32_t) function fitpack_parametric_surface_c_core_comm_size(this) bind(C,  &
        & name='fitpack_parametric_surface_c_core_comm_size')
        type(fitpack_parametric_surface_c), intent(in) :: this
        type(fitpack_parametric_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_parametric_surface_c_core_comm_size = fthis%core_comm_size()
        else
            fitpack_parametric_surface_c_core_comm_size = 0
        end if
    end function fitpack_parametric_surface_c_core_comm_size

    !> destroy_base
    subroutine fitpack_parametric_surface_c_destroy_base(this) bind(C, name='fitpack_parametric_surface_c_destroy_base')
        type(fitpack_parametric_surface_c), intent(inout) :: this
        type(fitpack_parametric_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%destroy_base()
        end if
    end subroutine fitpack_parametric_surface_c_destroy_base

    !> fit
    integer(c_int32_t) function fitpack_parametric_surface_c_fit(this, smoothing, n, periodic, keep_knots) bind(C,  &
        & name='fitpack_parametric_surface_c_fit')
        type(fitpack_parametric_surface_c), intent(in) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in), optional :: smoothing
        logical(c_bool), optional, intent(in) :: periodic(n)
        logical(c_bool), intent(in), optional :: keep_knots
        type(fitpack_parametric_surface), pointer :: fthis
        logical, allocatable :: fperiodic(:)
        logical :: f_keep_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fperiodic = logical(periodic)
            if (present(keep_knots)) f_keep_knots = logical(keep_knots)
            if (present(keep_knots)) then
                fitpack_parametric_surface_c_fit = fthis%fit(smoothing=smoothing, periodic=fperiodic, keep_knots=f_keep_knots)
            else
                fitpack_parametric_surface_c_fit = fthis%fit(smoothing=smoothing, periodic=fperiodic)
            end if
        else
            fitpack_parametric_surface_c_fit = 0
        end if
    end function fitpack_parametric_surface_c_fit

    !> least_squares
    integer(c_int32_t) function fitpack_parametric_surface_c_least_squares(this, n, u_knots, v_knots, smoothing, reset_knots)  &
        & bind(C, name='fitpack_parametric_surface_c_least_squares')
        type(fitpack_parametric_surface_c), intent(in) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), optional, intent(in) :: u_knots(n)
        real(c_double), optional, intent(in) :: v_knots(n)
        real(c_double), intent(in), optional :: smoothing
        logical(c_bool), intent(in), optional :: reset_knots
        type(fitpack_parametric_surface), pointer :: fthis
        logical :: f_reset_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(reset_knots)) f_reset_knots = logical(reset_knots)
            if (present(reset_knots)) then
                fitpack_parametric_surface_c_least_squares = fthis%least_squares(u_knots=u_knots, v_knots=v_knots,  &
                    & smoothing=smoothing, reset_knots=f_reset_knots)
            else
                fitpack_parametric_surface_c_least_squares = fthis%least_squares(u_knots=u_knots, v_knots=v_knots,  &
                    & smoothing=smoothing)
            end if
        else
            fitpack_parametric_surface_c_least_squares = 0
        end if
    end function fitpack_parametric_surface_c_least_squares

    !> surf_eval_one
    subroutine fitpack_parametric_surface_c_surf_eval_one(this, u, v, ierr, result, n_result) bind(C,  &
        & name='fitpack_parametric_surface_c_surf_eval_one')
        type(fitpack_parametric_surface_c), intent(inout) :: this
        real(c_double), intent(in), value :: u, v
        integer(c_int32_t), intent(out), optional :: ierr
        real(c_double), intent(inout) :: result(*)
        integer(c_int32_t), intent(in), value :: n_result
        real(c_double) :: fresult(n_result)
        type(fitpack_parametric_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fresult = fthis%eval(u=u, v=v, ierr=ierr)
            result(1:n_result) = fresult
        end if
    end subroutine fitpack_parametric_surface_c_surf_eval_one

    !> surf_eval_grid
    subroutine fitpack_parametric_surface_c_surf_eval_grid(this, n, u, v, ierr, result, n_result) bind(C,  &
        & name='fitpack_parametric_surface_c_surf_eval_grid')
        type(fitpack_parametric_surface_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: u(n)
        real(c_double), intent(in) :: v(n)
        integer(c_int32_t), intent(out), optional :: ierr
        real(c_double), intent(inout) :: result(*)
        integer(c_int32_t), intent(in), value :: n_result
        real(c_double), allocatable :: fresult(:,:,:)
        type(fitpack_parametric_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fresult = fthis%eval(u=u, v=v, ierr=ierr)
            result(1:n_result) = reshape(fresult, [n_result])
        end if
    end subroutine fitpack_parametric_surface_c_surf_eval_grid

    !> comm_pack
    subroutine fitpack_parametric_surface_c_comm_pack(this, n, buffer) bind(C, name='fitpack_parametric_surface_c_comm_pack')
        type(fitpack_parametric_surface_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(inout) :: buffer(n)
        type(fitpack_parametric_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%comm_pack(buffer)
        end if
    end subroutine fitpack_parametric_surface_c_comm_pack

    !> comm_expand
    subroutine fitpack_parametric_surface_c_comm_expand(this, n, buffer) bind(C, name='fitpack_parametric_surface_c_comm_expand')
        type(fitpack_parametric_surface_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: buffer(n)
        type(fitpack_parametric_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%comm_expand(buffer)
        end if
    end subroutine fitpack_parametric_surface_c_comm_expand

    !> core_comm_pack
    subroutine fitpack_parametric_surface_c_core_comm_pack(this, n, buffer) bind(C,  &
        & name='fitpack_parametric_surface_c_core_comm_pack')
        type(fitpack_parametric_surface_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(inout) :: buffer(n)
        type(fitpack_parametric_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%core_comm_pack(buffer)
        end if
    end subroutine fitpack_parametric_surface_c_core_comm_pack

    !> core_comm_expand
    subroutine fitpack_parametric_surface_c_core_comm_expand(this, n, buffer) bind(C,  &
        & name='fitpack_parametric_surface_c_core_comm_expand')
        type(fitpack_parametric_surface_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: buffer(n)
        type(fitpack_parametric_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%core_comm_expand(buffer)
        end if
    end subroutine fitpack_parametric_surface_c_core_comm_expand

    ! ===========================================================================================
    ! SECTION 8: Component Array Accessors (raw pointer + extents)
    ! ===========================================================================================
